<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">智能交通2017</string>
    <string name="app_title">智能交通</string>
    <string name="action_settings">设置</string>
    <string name="hint_name">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_mspwd">请再次输入密码</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="setting">网络设置</string>
    <string name="auto_login">自动登陆</string>
    <string name="rememberpwd">记住密码</string>
    <string name="register">注册</string>

    <string name="error_ip">服务器地址不能为空！</string>

    <string name="res_left_wodezhanghu">我的账户</string>
    <string name="res_left_zhanghuguanli">编码2</string>
    <string name="res_left_honglvdengguanli">红绿灯管理</string>
    <string name="res_left_weizhang">车辆违章</string>
    <string name="res_left_exit">用户退出</string>
    <string name="info_result">通讯数据返回结果！</string>
    <string name="info_app">欢迎使用智能交通APP！
"本系统的主要功能包括我的账户、账单管理、红绿灯管理、违章视频、公交查询、实时环境和车位查询等。</string>
    <string name="account_balance">账户余额:</string>
    <string name="car_number">车\u3000\u3000号:</string>
    <string name="recharge_money">充值金额:</string>
    <string name="query">查询</string>
    <string name="recharge">充值</string>
    <string name="light_info_manage">红绿灯信息管理</string>
    <string name="sort">排序:</string>
    <string name="crossing">路口</string>
    <string name="redDuration">红灯时长(S)</string>
    <string name="greenDuration">绿灯时长(S)</string>
    <string name="yellowDuration">黄灯时长(S)</string>
    <string name="res_left_zhangdanguanli">账单管理</string>
    <string name="bill_log">账单记录</string>
    <string name="serial_number">序号</string>
    <string name="car_number1">车号</string>
    <string name="recharge_money1">充值金额(元)</string>
    <string name="operator">操作人</string>
    <string name="recharge_time">充值时间</string>
    <string name="weizhangshipin">违章视频</string>
    <string name="weizhangtupian">违章图片</string>
    <string name="res_left_zhibiao">环境指标</string>


</resources>
